<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CalculaPreco"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="@string/pdtUm" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUm" />

    <EditText
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:id="@+id/pdtUm"
        android:layout_below="@+id/txtUm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDois"
        android:id="@+id/txtDois"
        android:layout_below="@+id/pdtUm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vlrUm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTrees"
        android:id="@+id/txtTres" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mvUm" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtQuatro"
        android:id="@+id/txtQuatro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pdtDois" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCinco"
        android:id="@+id/txtCinco" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vlrDois" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSeis"
        android:id="@+id/txtSeis" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mvDois" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.43" />

    <TextView
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:text="@string/txtSete"
        android:id="@+id/txtSete"
        android:layout_weight="0.17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUm"
        android:id="@+id/btnUm"
        android:layout_gravity="center_horizontal"
        android:onClick="calcular" />

</LinearLayout>
